Fix "redirect_uri" not matching properly basically anywhere

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,7 +8,7 @@
 		<% if (user) { %>
 			<p style="margin: auto;">Thank you <strong><%= user.username %></strong> for visiting uwu</p>
 		<% } else { %>
-			<a href="https://osu.ppy.sh/oauth/authorize?response_type=code&client_id=11451&redirect_uri=https://taevas.xyz">Login</a> <!-- /login  -->
+			<a href="https://osu.ppy.sh/oauth/authorize?response_type=code&client_id=11451&redirect_uri=https://taevas.xyz/">Login</a> <!-- /login  -->
 		<% } %>
 	</div>
 </footer>
