Add sanitizer because of potential security risks

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
 			<% } %>
 			<% if (status.reason) { %>
 				<h2><%= status.reason %></h2>
-				<a href="https://osu.ppy.sh/oauth/authorize?response_type=code&client_id=11451&redirect_uri=https://tolocalhost.com/">Click here to try to login</a>
+				<a href="https://osu.ppy.sh/oauth/authorize?response_type=code&client_id=11451&redirect_uri=https://taevas.xyz/">Click here to try to login</a>
 			<% } %>
 			<% if (status.user) { %> <!-- in theory it's currently impossible -->
 				<p>Nice to see you here, <%= status.user.username %>!</p>
