--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-	<link rel="stylesheet" type="text/css" href="/footer.css">
+	<link rel="stylesheet" type="text/css" href="./css/footer.css">
 	<div id="cool_stuff">
 		<a href="https://osu.ppy.sh/users/7276846">Made by Taevas</a>
 		<a href="https://github.com/TTTaevas/taevas.xyz">GitHub repository</a>
