--- a/views/referee.ejs
+++ b/views/referee.ejs
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Matches reffed by Taevas</title>
-		<link rel="stylesheet" type="text/css" href="/referee.css">
+		<link rel="stylesheet" type="text/css" href="./css/referee.css">
 	</head>
 	<body>
 		<%- include("partials/menu") %>
