--- a/views/player.ejs
+++ b/views/player.ejs
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Taevas' place</title>
-		<link rel="stylesheet" type="text/css" href="/login.css">
+		<link rel="stylesheet" type="text/css" href="./css/login.css">
 	</head>
 	<body>
 		<div id="message">
