--- a/views/history/partials/menu.ejs
+++ b/views/history/partials/menu.ejs
@@ -1,7 +1,7 @@
 <ul id="menu">
 	<link rel="stylesheet" type="text/css" href="./css/menu.css">
 	<script type="text/javascript" src="./js/menu.js"></script>
-	<li class="menu-list-element"><a class="menu-button" href="/">Home</a></li>
+	<li class="menu-list-element"><a class="menu-button" href="/history">Home</a></li>
 	<li class="menu-list-element dropdown">
 		<a href="javascript:void(0)" class="menu-button dropbtn" onclick="stay(this)">Jump to...</a>
 		<div class="dropdown-content">
