--- a/views/layer01/home.ejs
+++ b/views/layer01/home.ejs
@@ -3,17 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>taevas.xyz</title>
+		<title>LAYER01</title>
 		<link rel="stylesheet" type="text/css" href="./css/home.css">
 	</head>
 	<body>
+		<%- include("partials/menu") %>
 		<div id="main">
-			<a id="left" href="/history">
-				<span>TOURNAMENT HISTORY</span>
-			</a>
-			<a id="right" href="/layer01">
-				<span>LAYER01</span>
-			</a>
+			
 		</div>
 	</body>
 </html>
