--- a/views/layer01/partials/menu.ejs
+++ b/views/layer01/partials/menu.ejs
@@ -1,4 +1,5 @@
 <ul id="menu">
 	<link rel="stylesheet" type="text/css" href="./css/menu.css">
 	<li class="menu-list-element logo"><a class="menu-button" href="/layer01">LAYER01</a></li>
+	<li class="menu-list-element logo"><a class="menu-button" href="/layer01/rules">RULES</a></li>
 </ul>
