--- a/views/fourofour.ejs
+++ b/views/fourofour.ejs
@@ -3,13 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Taevas' place</title>
+		<title>what</title>
 		<link rel="stylesheet" type="text/css" href="./css/misc.css">
 	</head>
 	<body>
 		<div id="message">
-			<h2>This part of the website is currently not ready</h2>
-			<a href="/history">Click here to come back to the main page</a>
+			<h1>404</h1>
+			<h2>inexistant</h2>
+			<a href="/">root</a>
 		</div>
 	</body>
 </html>
