--- a/views/layer01/home.ejs
+++ b/views/layer01/home.ejs
@@ -38,7 +38,7 @@
 							Staff registration form
 						</a>
 					<% } else { %>
-						<a href="" class="button" id="login">
+						<a href="https://osu.ppy.sh/oauth/authorize?response_type=code&client_id=11451&redirect_uri=https://taevas.xyz/layer01/login" class="button" id="login">
 							Please login before registering as a player or as staff :3
 						</a>
 					<% } %>
