--- a/views/layer01/fourofour.ejs
+++ b/views/layer01/fourofour.ejs
@@ -3,13 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Taevas' place</title>
+		<title>LAYER01 | ???</title>
 		<link rel="stylesheet" type="text/css" href="./css/misc.css">
 	</head>
 	<body>
 		<div id="message">
-			<h2>This part of the website is currently not ready</h2>
-			<a href="/history">Click here to come back to the main page</a>
+			<h1>404</h1>
+			<h2>This part of the website does not exist</h2>
+			<a href="/layer01">Click here to come back to LAYER01</a>
+			<img src="./images/astolfoSleep.png" style="margin: 20px auto 0 auto;">
 		</div>
 	</body>
 </html>
