--- a/public/layer01/css/menu.css
+++ b/public/layer01/css/menu.css
@@ -18,8 +18,14 @@ body {
 }
 
 #main {
-	padding-top: 50px;
+	padding: 50px 0;
 	margin: 0 20px;
+}
+
+@media screen and (max-width: 420px) {
+	#main {
+		padding: 100px 0;
+	}
 }
 
 #menu {
@@ -38,16 +44,24 @@ body {
 	float: left;
 }
 
-.logo {
-	border-right: 1px solid white;
-}
-
 .menu-button {
 	display: inline-block;
 	color: #FFF;
 	text-align: center;
 	padding: 10px 30px;
 	text-decoration: none;
+}
+
+.logo {
+	padding: 6px 30px;
+	font-size: 22px;
+	font-weight: bold;
+}
+
+@media screen and (min-width: 1080px) {
+	.logo {
+		border-right: 1px solid #FFF;
+	}
 }
 
 #menu li a:hover {
