--- a/views/layer01/partials/menu.ejs
+++ b/views/layer01/partials/menu.ejs
@@ -1,5 +1,10 @@
 <ul id="menu">
 	<link rel="stylesheet" type="text/css" href="./css/menu.css">
-	<li class="menu-list-element logo"><a class="menu-button" href="/layer01">LAYER01</a></li>
-	<li class="menu-list-element logo"><a class="menu-button" href="/layer01/rules">RULES</a></li>
+	<li class="menu-list-element"><a class="menu-button logo" href="/layer01">LAYER01</a></li>
+	<% if (user && user.roles.admin) { %>
+		<li class="menu-list-element"><a class="menu-button" href="/layer01/staff-regs">STAFF REGS</a></li>
+	<% } %>
+	<li class="menu-list-element"><a class="menu-button" href="/layer01/rules">RULES</a></li>
+	<!-- <li class="menu-list-element"><a class="menu-button" href="/layer01/players">PLAYERS</a></li>
+	<li class="menu-list-element"><a class="menu-button" href="/layer01/playlists">PLAYLISTS</a></li> -->
 </ul>
