--- a/views/layer01/rules.ejs
+++ b/views/layer01/rules.ejs
@@ -13,7 +13,7 @@
 			<div id="rules">
 				<div id="layer01">
 					<h2>WHAT IS LAYER01 LIKE?</h2>
-					<p>LAYER01 is a 1v1 double-elimination osu! tournament played in the osu! gamemode<br>It will use qualifiers to determine which players should advance to the bracket stage<br>Detailed informations can be found below
+					<p>LAYER01 is a 1v1 double-elimination osu! tournament played in the osu! gamemode<br>It will use qualifiers to determine which players should advance to the bracket stage<br>All maps will be played with Scorev2 and No-Fail<br>Detailed informations can be found below</p>
 				</div>
 				<div id="participants">
 					<h2>WHO IS ALLOWED TO PLAY?</h2>
