--- a/public/layer01/css/misc.css
+++ b/public/layer01/css/misc.css
@@ -34,7 +34,7 @@ body {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	padding: 50px 100px;
-	background-color: black;
+	background-color: #000;
 	border: 2px solid;
 }
 
