--- a/public/layer01/css/regs.css
+++ b/public/layer01/css/regs.css
@@ -1,4 +1,4 @@
-form, form > * {
+form > * {
 	display: inline-grid;
 }
 
@@ -55,14 +55,6 @@ a {
 	color: #5865F2;
 }
 
-label:first-of-type {
-	margin-top: 20px;
-}
-
-input[type=text] {
-	padding: 5px 10px;
-}
-
 #experience {
 	width: 400px;
 	max-width: 40vw;
@@ -72,21 +64,4 @@ input[type=text] {
 	#experience {
 		height: 50px;
 	}
-}
-
-#submit {
-	font-family: LiberationSans-Bold, Arial, sans-serif;
-	width: fit-content;
-	margin: 30px auto;
-	padding: 20px;
-	font-size: 30px;
-	border: 1px solid white;
-	background-color: #000;
-	color: #FFF;
-	cursor: pointer;
-}
-
-#submit:hover {
-	background-color: #FFF;
-	color: #000;
 }
