Final (?) changes before opening staff registrations

--- a/views/layer01/home.ejs
+++ b/views/layer01/home.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -57,14 +57,14 @@
 							<li>Grandfinals</li>
 						</ul>
 						<ul id="dates">
-							<li>2022-01-?? to 2022-02-06</li>
-							<li>2022-02-12 to 2022-02-13</li>
+							<li>2022-01-?? to 2022-01-31</li>
+							<li>2022-02-05 to 2022-02-06</li>
 							<li>---</li>
+							<li>2022-02-12 to 2022-02-13</li>
 							<li>2022-02-19 to 2022-02-20</li>
-							<li>2022-02-26 to 2022-02-27</li>
+							<li>2022-03-26 to 2022-03-27</li>
 							<li>2022-03-05 to 2022-03-06</li>
 							<li>2022-03-12 to 2022-03-13</li>
-							<li>2022-03-19 to 2022-03-20</li>
 						</ul>
 					</div>
 					<ul id="prizepool">
