--- a/views/layer01/rules.ejs
+++ b/views/layer01/rules.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,9 +17,10 @@
 				</div>
 				<div id="participants">
 					<h2>WHO IS ALLOWED TO PLAY?</h2>
-					<p>LAYER01 is an osu! tournament targetting players that are in the 75k-125k rank range in the osu! gamemode<br>Players that are not within that rank range at the end of the registrations period will not be allowed to play<br>Players that have a staff position in this tournament other than referee*, streamer or commentator, will not be allowed to play<br>Players that have reached a top 3 position in <a href="https://osu.ppy.sh/community/forums/topics/1424031" target="_blank">Cyberia's Dancefloors</a> will not be allowed to play</p>
+					<p>LAYER01 is an osu! tournament targetting players that are in the 75k-125k rank range in the osu! gamemode<br>Players that are not within that rank range at the end of the registrations period* will not be allowed to play<br>Players that have a staff position in this tournament other than referee**, streamer or commentator, will not be allowed to play<br>Players that have reached a top 3 position in <a href="https://osu.ppy.sh/community/forums/topics/1424031" target="_blank">Cyberia's Dancefloors</a> will not be allowed to play</p>
 					<p>Players that are not allowed to play will be removed from the player list during the screening process<br>The screening process will take place during the week qualifiers are played<br>During the screening process, sus<!--sus :flushed:-->picious players may end up getting removed from the player list as well</p>
-					<p>*Note that self-reffing will not be allowed</p>
+					<p>*The end of the registrations period is available on the main page, though note that the exact hour is 00:00:00 UTC+0
+					<p>**Note that self-reffing will not be allowed</p>
 				</div>
 				<div id="disqualification">
 					<h2>CAN I GET DISQUALIFIED?</h2>
@@ -75,7 +76,7 @@
 				<div id="matches">
 					<h2>THE MATCH PROCEDURE</h2>
 					<p>Each match will have a default schedule, players are free to reschedule their match using the reschedule procedure<br>If a player is not in the match’s lobby 10 minutes after the scheduled time, their opponent will win by default (unless something is agreed on by everyone involved)<br>Warmups are NOT allowed</p>
-					<p>All matches will be BO13<br>In each match, both players will need to ban two maps (ABBA)<br>Double-picking (except for NM) and double-banning (except for NM) is not allowed</p>
+					<p>All matches will be BO13, the three playlists will always be X, Y and Z<br>In each match, both players will need to ban two maps (ABBA)<br>Double-picking (except for NM) and double-banning (except for NM) is not allowed</p>
 					<p>Like for Qualifiers, HR and DT maps may be played with an additional HD mod<br>Therefore those maps will be put as "Freemod" by the referee, but for example, HR maps will still require HRNF from the player, and any mod other than HR, HD and NF will not be accepted<br>The HD multiplier for those maps will be nullified; a 1.06 divider will be applied to scores with an HD mod on HR and DT maps by the referee</p>
 					<p>Once both players are ready, they will start by DMing their referee which playlist they choose to ban<br>The one remaining playlist will be played<br>If the two players ban the same playlist, the referee will `!roll 2` in order to determine which playlist will be played</p>
 					<p>Once the playlist of the match is determined, both players will use the `!roll` command<br>Winner of the roll decides of the pick order, loser of the roll decides of the ban order</p>
