--- a/views/layer01/rules.ejs
+++ b/views/layer01/rules.ejs
@@ -64,7 +64,7 @@
 					<ul>
 						<li>EZ1: /shrug</li>
 					</ul>
-					<p>Qualifiers playlist's NM1 SR should be around 5.2*<br>Playlist X's NM1 SR should be around 4.8*<br>Playlist Y's NM1 SR should be around 5.1*<br>Playlist Z's NM1 SR should be around 5.4*</p>
+					<p>Qualifiers playlist's NM1 SR should be around 5.2*<br>Playlist X's NM1 SR should be around 4.9*<br>Playlist Y's NM1 SR should be around 5.2*<br>Playlist Z's NM1 SR should be around 5.5*</p>
 				</div>
 				<div id="qualifiers">
 					<h2>THE QUALIFIERS PROCEDURE</h2>
@@ -75,7 +75,7 @@
 				</div>
 				<div id="matches">
 					<h2>THE MATCH PROCEDURE</h2>
-					<p>Each match will have a default schedule, players are free to reschedule their match using the reschedule procedure<br>If a player is not in the match’s lobby 10 minutes after the scheduled time, their opponent will win by default (unless something is agreed on by everyone involved)<br>Warmups are NOT allowed</p>
+					<p>Each match will have a default schedule, players are free to reschedule their match using the reschedule procedure<br>If a player is not in the match’s lobby 10 minutes after the scheduled time, their opponent will win by default (unless something is agreed on by everyone involved)<br>If both players are too late, unless they agree on rescheduling, the first player to appear in the Discord will win the match by default<br>Warmups are NOT allowed</p>
 					<p>All matches will be BO13, the three playlists will always be X, Y and Z<br>In each match, both players will need to ban two maps (ABBA)<br>Double-picking (except for NM) and double-banning (except for NM) is not allowed</p>
 					<p>Like for Qualifiers, HR and DT maps may be played with an additional HD mod<br>Therefore those maps will be put as "Freemod" by the referee, but for example, HR maps will still require HRNF from the player, and any mod other than HR, HD and NF will not be accepted<br>The HD multiplier for those maps will be nullified; a 1.06 divider will be applied to scores with an HD mod on HR and DT maps by the referee</p>
 					<p>Once both players are ready, they will start by DMing their referee which playlist they choose to ban<br>The one remaining playlist will be played<br>If the two players ban the same playlist, the referee will `!roll 2` in order to determine which playlist will be played</p>
