Add player regs support

--- a/public/layer01/css/menu.css
+++ b/public/layer01/css/menu.css
@@ -99,6 +99,15 @@ input[type=text] {
 	color: #000;
 }
 
+#message {
+	font-size: 24px;
+	background-color: #FFF;
+	color: #000;
+	padding: 10px;
+	margin: 20px auto;
+	width: fit-content;
+}
+
 .right {
 	float: right;
 }
