Add link to forum post

--- a/views/layer01/home.ejs
+++ b/views/layer01/home.ejs
@@ -22,7 +22,7 @@
 						<img src="./images/discord.png">
 						Discord server
 					</a>
-					<a href="" class="button" id="osu">
+					<a href="https://osu.ppy.sh/community/forums/topics/1502697" class="button" id="osu">
 						<img src="./images/osu.png">
 						Forum post
 					</a>
