Create (admin-only) button to update ranks

--- a/views/layer01/players.ejs
+++ b/views/layer01/players.ejs
@@ -10,6 +10,9 @@
 		<%- include("partials/menu") %>
 		<div id="main">
 			<h1>PLAYERS (<%= players.length %>)</h1>
+			<% if (user && user.roles.admin) { %>
+				<form method="POST" action=""><input type="submit" id="submit" value="Update ranks!"></form>
+			<% } %>
 			<ul id="regs">
 				<% for (let i = 0; i < players.length; i++) { %>
 					<li class="reg">
