--- a/views/layer01/partials/menu.ejs
+++ b/views/layer01/partials/menu.ejs
@@ -6,5 +6,10 @@
 	<% } %>
 	<li class="menu-list-element"><a class="menu-button" href="/layer01/rules">RULES</a></li>
 	<li class="menu-list-element"><a class="menu-button" href="/layer01/players">PLAYERS</a></li>
-	<!-- <li class="menu-list-element"><a class="menu-button" href="/layer01/playlists">PLAYLISTS</a></li> -->
+	<% if (user && user.roles.admin) { %>
+		<li class="menu-list-element"><a class="menu-button" href="/layer01/playlists">PLAYLISTS</a></li>
+	<% } %>
+	<% if (user && user.roles.admin) { %>
+		<li class="menu-list-element"><a class="menu-button" href="/layer01/qualifiers">QUALIFIERS</a></li>
+	<% } %>
 </ul>
