Playlists tweaks, allow everyone to see them

--- a/public/layer01/css/playlists.css
+++ b/public/layer01/css/playlists.css
@@ -6,7 +6,7 @@ h1 {
 .playlist_container {
 	border: 1px solid;
 	width: fit-content;
-	margin: auto;
+	margin: 50px auto;
 	padding: 0 25px 25px 25px;
 }
 
@@ -74,7 +74,8 @@ td:last-child {
 	padding: 0 7px;
 	margin: 7px 7px;
 	display: inline-block;
-	max-width: 400px;
+	min-width: 75%;
+	max-width: 50vw;
 }
 
 form {
@@ -93,4 +94,20 @@ input {
 
 .c_id {
 	width: 60px;
+}
+
+@media screen and (max-width: 830px) {
+	td:nth-child(1), td:nth-child(3), td:nth-child(7) {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 540px) {
+	.playlist_container {
+		padding: 0px 10px 25px 10px;
+	}
+
+	td:nth-child(8), td:nth-child(9), td:nth-child(10) {
+		display: none;
+	}
 }
