--- a/views/fourofour.ejs
+++ b/views/fourofour.ejs
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>what</title>
-		<link rel="stylesheet" type="text/css" href="./css/misc.css">
+		<link rel="stylesheet" type="text/css" href="./root/css/misc.css">
 	</head>
 	<body>
 		<div id="message">
