--- a/views/layer01/partials/menu.ejs
+++ b/views/layer01/partials/menu.ejs
@@ -1,6 +1,9 @@
 <ul id="menu">
 	<link rel="stylesheet" type="text/css" href="./css/menu.css">
 	<li class="menu-list-element"><a class="menu-button logo" href="/layer01">LAYER01</a></li>
+	<% if (!user) { %>
+		<li class="menu-list-element"><a class="menu-button" href="https://osu.ppy.sh/oauth/authorize?response_type=code&client_id=11451&redirect_uri=https://taevas.xyz/layer01/login">LOGIN</a></li>
+	<% } %>
 	<% if (user && user.roles.admin) { %>
 		<li class="menu-list-element"><a class="menu-button" href="/layer01/staff-regs">STAFF REGS</a></li>
 	<% } %>
@@ -8,6 +11,6 @@
 	<li class="menu-list-element"><a class="menu-button" href="/layer01/players">PLAYERS</a></li>
 	<li class="menu-list-element"><a class="menu-button" href="/layer01/playlists">PLAYLISTS</a></li>
 	<% if (user && user.roles.admin) { %>
-		<li class="menu-list-element"><a class="menu-button" href="/layer01/qualifiers">QUALIFIERS</a></li>
+		<li class="menu-list-element"><a class="menu-button" href="/layer01/qualifiers">QUALIFIERS LOBBIES</a></li>
 	<% } %>
 </ul>
