--- a/views/layer01/home.ejs
+++ b/views/layer01/home.ejs
@@ -13,7 +13,7 @@
 				<h1>WELCOME TO <span>LAYER01</span></h1>
 				<% let date = new Date() %>
 				<% function a(b) {return b>9?b:"0".concat(b)} %>
-				<p><%=a(date.getUTCFullYear())%>-<%=a(date.getUTCMonth()+1)%>-<%=a(date.getUTCDate())%> <%=a(date.getUTCHours())%>:<%=a(date.getUTCMinutes())%>:<%=a(date.getUTCSeconds())%> UTC+0</p>	
+				<h4 id="time"><%=a(date.getUTCFullYear())%>-<%=a(date.getUTCMonth()+1)%>-<%=a(date.getUTCDate())%> <%=a(date.getUTCHours())%>:<%=a(date.getUTCMinutes())%>:<%=a(date.getUTCSeconds())%> UTC+0</h4>	
 			</div>
 			<div id="bottom">
 
@@ -60,7 +60,7 @@
 							<li>---</li>
 							<li>2022-02-12 to 2022-02-13</li>
 							<li>2022-02-19 to 2022-02-20</li>
-							<li>2022-03-26 to 2022-03-27</li>
+							<li>2022-02-26 to 2022-02-27</li>
 							<li>2022-03-05 to 2022-03-06</li>
 							<li>2022-03-12 to 2022-03-13</li>
 						</ul>
