--- a/views/layer01/staff-registration.ejs
+++ b/views/layer01/staff-registration.ejs
@@ -11,7 +11,7 @@
 		<div id="main">
 			<h1>STAFF REGISTRATION</h1>
 			<% if (message) { %>
-				<h4 id="message"><%= message %></div>
+				<h3 id="message"><%= message %></h3>
 			<% } %>
 			<form method="POST" action="">
 				<div class="form_part" id="div_discord">
